--- a/helloworld2/Base.lproj/Main.storyboard
+++ b/helloworld2/Base.lproj/Main.storyboard
@@ -1,22 +1,105 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6162" systemVersion="14A238h" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6206.8" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6160"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7026.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="helloworld2" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pec-sh-CEk">
+                                <rect key="frame" x="188" y="118" width="225" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="225" id="9rs-XL-lJi"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="9rs-XL-lJi"/>
+                                    </mask>
+                                </variation>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="88" y="123" width="225" height="50"/>
+                                    <mask key="constraints">
+                                        <include reference="9rs-XL-lJi"/>
+                                    </mask>
+                                </variation>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="koE-LJ-bOG">
+                                <rect key="frame" x="323" y="337" width="90" height="30"/>
+                                <state key="normal" title="Goodbye">
+                                    <color key="titleShadowColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="223" y="337" width="90" height="30"/>
+                                </variation>
+                                <connections>
+                                    <action selector="buttonPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="J5G-eM-n9J"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lfH-BH-2iK">
+                                <rect key="frame" x="188" y="337" width="90" height="30"/>
+                                <state key="normal" title="Hello">
+                                    <color key="titleShadowColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="88" y="337" width="90" height="30"/>
+                                </variation>
+                                <connections>
+                                    <action selector="buttonPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="D3w-SV-GjC"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="Pec-sh-CEk" firstAttribute="trailing" secondItem="koE-LJ-bOG" secondAttribute="trailing" id="7Fy-Mk-cev"/>
+                            <constraint firstAttribute="centerX" secondItem="Pec-sh-CEk" secondAttribute="centerX" id="Fy3-bI-J4H"/>
+                            <constraint firstItem="Pec-sh-CEk" firstAttribute="leading" secondItem="lfH-BH-2iK" secondAttribute="leading" id="JTS-gp-tmM"/>
+                            <constraint firstItem="lfH-BH-2iK" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="88" id="Kv5-Jb-c1I"/>
+                            <constraint firstAttribute="trailing" secondItem="koE-LJ-bOG" secondAttribute="trailing" constant="87" id="KzC-V4-KPe"/>
+                            <constraint firstItem="koE-LJ-bOG" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" constant="337" id="RBp-AT-M4V"/>
+                            <constraint firstItem="Pec-sh-CEk" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" constant="123" id="ytD-vD-Tv7"/>
+                            <constraint firstItem="lfH-BH-2iK" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" constant="337" id="zd3-T4-fnf"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="7Fy-Mk-cev"/>
+                                <exclude reference="Fy3-bI-J4H"/>
+                                <exclude reference="JTS-gp-tmM"/>
+                                <exclude reference="ytD-vD-Tv7"/>
+                                <exclude reference="Kv5-Jb-c1I"/>
+                                <exclude reference="zd3-T4-fnf"/>
+                                <exclude reference="KzC-V4-KPe"/>
+                                <exclude reference="RBp-AT-M4V"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="constraints">
+                                <include reference="7Fy-Mk-cev"/>
+                                <include reference="Fy3-bI-J4H"/>
+                                <include reference="JTS-gp-tmM"/>
+                                <include reference="ytD-vD-Tv7"/>
+                                <include reference="Kv5-Jb-c1I"/>
+                                <include reference="zd3-T4-fnf"/>
+                                <include reference="KzC-V4-KPe"/>
+                                <include reference="RBp-AT-M4V"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <connections>
+                        <outlet property="messageText" destination="Pec-sh-CEk" id="gJA-WZ-XOs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
